@@ -13,43 +13,27 @@ For the backend, it uses a schema called "exercise_tracker_database", along with
 * The exercises table is a table that holds entries that contain the columns <i>exercise_id</i>, <i>user</i>, <i>description</i>, <i>duration</i>, and <i>date</i>. The ID column is the primary key and it automatically increments, the user column contains the name of a selectable user, the description column contains the description of the exercise, the duration column is how long the exercise was done for (in minutes), and the date column is the date in which the exercise occurs. These columns are referencing "Exercise Log Data" entries.
 * The login table is a table that holds entries containing the columns <i>username</i> and <i>password</i>. These columns are referencing username and password login information to enter the system.
 
-For the frond end, it is using the ExerciseTracker-Java project folder. In it's src folder, it contains a dbutil package, a login package, an exerciselogs package, an editexerciselog package, a deleteexerciselog package, a createexerciselog package, and a createuser package. The admin and login package use a model-view-controller pattern to develop each window of the application.
-* The dbutil package contains the java class file DatabaseConnection.java, which is used to establish a connection to the MySQL database on the schema "school" by using the appropriate credentials and URL of the database.
+For the frond end, it is using the ExerciseTracker-Java project folder. In it's src folder, it contains a dbutil package, a login package, an exerciselogs package, an editexerciselog package, a deleteexerciselog package, a createuser package, and a createexerciselog package. The login, exerciselogs, editexerciselog, deleteexerciselog, createuser, and createexerciselog packages use a model-view-controller pattern to develop each window of the application.
+* The dbutil package contains the java class file DatabaseConnection.java, which is used to establish a connection to the MySQL database on the schema "exercise_tracker_database" by using the appropriate credentials and URL of the database.
 * The login package contains LoginModel.java, LoginController.java, Login.java, and Login.fxml. They are the model, controller, view and fxml files respectively for the initial window that appears when the program is launched.
-* The admin package contains StudentData.java, AdminModel.java, AdminController.java, and Admin.fxml. The StudentData.java file defines the structure of each student in the database, and the rest of the fles are the model, controller, and fxml files respectively for the window that launches upon successful login into the application via the first window.
+* The exerciselogs package contains ExerciseLogs.fxml, ExerciseLogsController.java, and ExerciseLogsModel.java. They are the view, controller and model files respectively for the window that launches the Exercise Tracker Exercise Logs page upon successful login into the application via the first window. This window lists all of the exercise logs in the system.
+* The editexerciselog package contains EditExerciseLog.fxml, EditExerciseLogController.java, and EditExerciseLogModel.java. They are the view, controller and model files respectively for the window that launches the Edit Exercise Log page where exercise logs can be deleted.
+* The deleteexerciselog package contains DeleteExerciseLog.fxml, DeleteExerciseLogController.java, and DeleteExerciseLogModel.java. They are the view, controller and model files respectively for the window that launches the Delete Exercise Log page where exercise logs can be edited.
+* The createuser package contains CreateUser.fxml, CreateUserController.java, CreateUserModel.java, and UserData.java. The first 3 files are the view, controller and model files respectively and UserData.java file defines the structure of each user in the database. This page is for the Create User page and is used to create users in the system to be selectable when creating an exercise log.
+* The createexerciselog package contains CreateExerciseLog.fxml, CreateExerciseLogController.java, CreateExerciseLogModel.java, and ExerciseLogData.java. The first 3 files are the view, controller and model files respectively and ExerciseLogData.java file defines the structure of each exercise log in the database. This page is for the Create Exercise Log page and is used to create new exercise logs in the system.
 
 ## Getting Started
 
 ### Prerequisites
-The following needed to be installed via commands in the terminal:
-* In the main project folder:
-```sh 
-npx create-react-app folder_name
-```
+The JavaFX SDK needed to be imported as a library in the build path.
 
+The following run configurations needed to be set as VM arguments:
 ```sh
-npm init -y
+--module-path "C:\Program Files (x86)\Java\jre1.8.0_91\lib\javafx-sdk-15.0.1\lib" 
+--add-modules javafx.controls,javafx.fxml
 ```
 
-```sh
-npm install express cors mongoose dotenv
-```
-
-* In the backend folder:
-
-```sh
-npm install -g nodemon
-```
-
-* In the src folder:
-```sh
-npm install bootstrap
-```
-
-```sh
-npm install react-router-dom
-```
-
+A MySQL JDBC driver had to be imported to provide the program with a connection to the MySQL database.
 
 ## Usage
 The basic functionality of the website is as follows:
